# video2ascii_converter

./: CMakeLists.txt  README.md  main.cpp
